# Aurora-AI-Agency

./: .gitignore  AGENCY.md  CLAUDE.md  README.md  REPOSITORY-REVIEW.md  checkpoint.sh  vercel.json
.claude/: SKILLS_REFERENCE.md
_empire/: ARCHITECTURE_GAP_SYNTHESIS.md
autoboros-cockpit/: README.md  eslint.config.js  nginx.conf  package.json  vite.config.js
autoboros/backend/: .env.example  AUDIT_CHANGELOG.md  Dockerfile  Dockerfile.mcp  README.md  alembic.ini  docker-compose.yml  pyproject.toml
autoboros/backend/alembic/: env.py
autoboros/backend/alembic/versions/: d2550116f6ce_initial_schema.py
autoboros/backend/app/: config.py  database.py  main.py  schemas.py
autoboros/backend/app/models/: __init__.py  activity.py  job.py
autoboros/backend/app/routers/: __init__.py  activity.py  auth.py  jobs.py  n8n.py  seed.py  websocket.py
autoboros/backend/app/services/: __init__.py  n8n_bridge.py  websocket_manager.py
autoboros/backend/mcp/: README.md  mcp_http_bridge.py  mcp_server.py
autoboros/backend/n8n/workflows/: README.md  business-analysis.json  client-onboarding.json  evermystic_phase2_haiku.json  evermystic_phase2_haiku_production.json  example_approval.json  lead-followup.json  social-ad-generation.json
autoboros/backend/scripts/: seed_evermystic.py
autoboros/backend/tests/: test_jobs.py
client-portal/: .env.example  next.config.mjs  package.json  tailwind.config.ts
gastown/: COMPLETE_SYSTEM.md  QUICKSTART.md  README.md  project_generator.py
hexstrike-ai/: README.md
site/: 404.html  README.md  _headers  index.html  robots.txt  (+1 more)
(+277 files in other folders)
